feat(exercise-2): Complete Exercise 2

--- a/exercise-1/index.ipynb
+++ b/exercise-1/index.ipynb
@@ -15,8 +15,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "internal_df = pd.read_excel('data/Exercise #1A.xlsx')\n",
-    "acacia_df = pd.read_excel('data/Exercise #1B.xlsx')"
+    "internal_df = pd.read_excel('../data/Exercise #1A.xlsx')\n",
+    "acacia_df = pd.read_excel('../data/Exercise #1B.xlsx')"
    ],
    "outputs": [],
    "execution_count": null
@@ -146,7 +146,7 @@
     "missing_output_df = missing_output_df[['Case #'] + [col for col in missing_output_df.columns if col != 'Case #']]\n",
     "\n",
     "# Create an Excel writer\n",
-    "output_file = 'output/acacia-data-discrepancies.xlsx'\n",
+    "output_file = '../output/acacia-data-discrepancies.xlsx'\n",
     "with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
     "    \n",
     "    missing_output_df.to_excel(writer, sheet_name='Missing', index=False)\n",
